; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_settings.c_ghb_widget_to_setting.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_settings.c_ghb_widget_to_setting.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"ghb_widget_to_setting\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"No value found for %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ghb_widget_to_setting(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32* null, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  br label %30

10:                                               ; preds = %2
  %11 = call i32 (i8*, ...) @g_debug(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %12 = load i32*, i32** %4, align 8
  %13 = call i32* @ghb_get_setting_key(i32* %12)
  store i32* %13, i32** %5, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %10
  br label %30

17:                                               ; preds = %10
  %18 = load i32*, i32** %4, align 8
  %19 = call i32* @ghb_widget_value(i32* %18)
  store i32* %19, i32** %6, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %27

22:                                               ; preds = %17
  %23 = load i32*, i32** %3, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @ghb_dict_set(i32* %23, i32* %24, i32* %25)
  br label %30

27:                                               ; preds = %17
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 (i8*, ...) @g_debug(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i32* %28)
  br label %30

30:                                               ; preds = %9, %16, %27, %22
  ret void
}

declare dso_local i32 @g_debug(i8*, ...) #1

declare dso_local i32* @ghb_get_setting_key(i32*) #1

declare dso_local i32* @ghb_widget_value(i32*) #1

declare dso_local i32 @ghb_dict_set(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
